--- a/index.html
+++ b/index.html
@@ -37,36 +37,7 @@
                 "parameters": ["id"]
               },
               "create-form": {
-                "uri": "create-message",
-                "methods": ["POST"]
-              },
-              "login": {
-                "uri": "login",
-                "methods": ["GET", "HEAD"]
-              },
-              "logout": {
-                "uri": "logout",
-                "methods": ["POST"]
-              },
-              "storage.local": {
-                "uri": "storage/{path}",
-                "methods": ["GET", "HEAD"],
-                "wheres": {
-                  "path": ".*"
-                },
-                "parameters": ["path"]
-              }
-            },
-            "location": ""
-          },
-          "message": "",
-          "client": {
-            "fontName": "Mali",
-            "color": "#ff0019",
-            "messages": [
-              "Github WusThanhDieu",
-              "Test 1",
-              "Test 2"
+                "uri": "create-messĐà"
             ],
             "music": "//thanhdieu.com/music.mp3"
           },
