--- a/index.html
+++ b/index.html
@@ -64,9 +64,9 @@
             "fontName": "Mali",
             "color": "#ff0019",
             "messages": [
-              "Github WusThanhDieu",
-              "Test 1",
-              "Test 2"
+              "Cầu Cho 2 Đỗ NV1",
+              "Nam Mô A Di Đà ",
+              "Nam Mô "
             ],
             "music": "//thanhdieu.com/music.mp3"
           },
